--- a/MedicalSystem/src/Doktor/doktor.fxml
+++ b/MedicalSystem/src/Doktor/doktor.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,7 +14,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Doktor.DoktorController">
    <children>
@@ -33,14 +34,14 @@
                                                 <Image url="@Images/Doctor.png" />
                                              </image>
                                           </ImageView>
-                                          <Label layoutX="176.0" layoutY="89.0" text="Doktor:">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="25.0" />
-                                             </font>
-                                          </Label>
-                                          <Text layoutX="176.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Doktor name" underline="true">
+                                          <Label layoutX="159.0" layoutY="26.0" text="Korisničko ime:" underline="true">
                                              <font>
                                                 <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <Text fx:id="DoktorName" layoutX="263.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Doktor name" AnchorPane.leftAnchor="263.0">
+                                             <font>
+                                                <Font name="Bookman Old Style Italic" size="20.0" />
                                              </font>
                                           </Text>
                                           <Pane layoutX="-2.0" layoutY="191.0" prefHeight="7.0" prefWidth="511.0" style="-fx-background-color: #000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -48,48 +49,53 @@
                                                 <Insets top="5.0" />
                                              </padding>
                                           </Pane>
+                                          <Button fx:id="DokLogout" layoutX="335.0" layoutY="128.0" mnemonicParsing="false" onMouseClicked="#Logout" text="Logout">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                                             </font>
+                                          </Button>
                                        </children>
                                     </AnchorPane>
                                     <AnchorPane prefHeight="489.0" prefWidth="467.0">
                                        <children>
-                                          <Label layoutX="34.0" layoutY="37.0" text="Ime Prezime:" AnchorPane.bottomAnchor="428.6">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text layoutX="189.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" underline="true" AnchorPane.bottomAnchor="418.6">
+                                          <Label layoutX="34.0" layoutY="37.0" text="Ime Prezime:" underline="true" AnchorPane.bottomAnchor="428.6">
                                              <font>
                                                 <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Text fx:id="ImePrezime" layoutX="169.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="416.961328125" AnchorPane.leftAnchor="175.0">
+                                             <font>
+                                                <Font name="Bookman Old Style Italic" size="18.0" />
                                              </font>
                                           </Text>
-                                          <Label layoutX="34.0" layoutY="137.0" text="JMBG:" AnchorPane.bottomAnchor="328.6">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text layoutX="133.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" underline="true" AnchorPane.bottomAnchor="316.961328125">
+                                          <Label layoutX="34.0" layoutY="137.0" text="JMBG:" underline="true" AnchorPane.bottomAnchor="328.6">
                                              <font>
                                                 <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Text fx:id="JMBG" layoutX="107.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="316.961328125" AnchorPane.leftAnchor="107.0">
+                                             <font>
+                                                <Font name="Bookman Old Style Italic" size="18.0" />
                                              </font>
                                           </Text>
-                                          <Label layoutX="34.0" layoutY="237.0" text="Odjel" AnchorPane.bottomAnchor="228.60000000000002">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text layoutX="111.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" underline="true" AnchorPane.bottomAnchor="216.96132812500002">
+                                          <Label layoutX="34.0" layoutY="237.0" text="Odjel:" underline="true" AnchorPane.bottomAnchor="228.60000000000002">
                                              <font>
                                                 <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Text fx:id="Odjel" layoutX="95.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="216.96132812500002" AnchorPane.leftAnchor="100.0">
+                                             <font>
+                                                <Font name="Bookman Old Style Italic" size="18.0" />
                                              </font>
                                           </Text>
-                                          <Label layoutX="34.0" layoutY="337.0" text="Opis" AnchorPane.bottomAnchor="128.60000000000002">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text layoutX="111.0" layoutY="368.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" underline="true" AnchorPane.bottomAnchor="116.96132812500002">
+                                          <Label layoutX="34.0" layoutY="337.0" text="Opis:" underline="true" AnchorPane.bottomAnchor="128.60000000000002">
                                              <font>
                                                 <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Text fx:id="Opis" layoutX="87.0" layoutY="368.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="116.96132812500002" AnchorPane.leftAnchor="92.0">
+                                             <font>
+                                                <Font name="Bookman Old Style Italic" size="18.0" />
                                              </font>
                                           </Text>
                                           <Pane layoutY="87.0" prefHeight="0.0" prefWidth="511.0" style="-fx-background-color: #fff;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
@@ -112,20 +118,118 @@
                                                 <Insets top="5.0" />
                                              </padding>
                                           </Pane>
+                                          <Label layoutX="33.0" layoutY="430.0" text="Lozinka:" underline="true">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <Text fx:id="Lozinka" layoutX="130.0" layoutY="461.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.leftAnchor="130.0">
+                                             <font>
+                                                <Font name="Bookman Old Style Italic" size="18.0" />
+                                             </font>
+                                          </Text>
                                        </children>
                                     </AnchorPane>
                                  </children>
                               </VBox>
                               <Pane prefHeight="690.0" prefWidth="7.0" style="-fx-background-color: #000;" />
+                              <VBox prefHeight="690.0" prefWidth="806.0">
+                                 <children>
+                                    <AnchorPane prefHeight="77.0" prefWidth="806.0" style="-fx-background-color: #0ed145;">
+                                       <children>
+                                          <Label layoutX="21.0" layoutY="20.0" text="Uredite svoj profil:" underline="true">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="35.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="59.0" prefWidth="806.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="14.0" text="Novo Ime Prezime:" underline="true">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="editNovoIme" layoutX="292.0" layoutY="17.0" prefHeight="26.0" prefWidth="455.0" />
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="10.0" right="10.0" top="30.0" />
+                                       </VBox.margin>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="10.0" layoutY="88.0" prefHeight="59.0" prefWidth="806.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="14.0" text="Novi JMBG:" underline="true">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="editNoviJMBG" layoutX="292.0" layoutY="17.0" prefHeight="26.0" prefWidth="455.0" />
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="10.0" right="10.0" top="30.0" />
+                                       </VBox.margin>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="10.0" layoutY="147.0" prefHeight="59.0" prefWidth="806.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="14.0" text="Novi Odjel:" underline="true">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="editNoviodjel" layoutX="292.0" layoutY="17.0" prefHeight="26.0" prefWidth="455.0" />
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="10.0" right="10.0" top="30.0" />
+                                       </VBox.margin>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="10.0" layoutY="206.0" prefHeight="59.0" prefWidth="806.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="14.0" text="Novi Opis:" underline="true">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="editNoviOpis" layoutX="292.0" layoutY="17.0" prefHeight="26.0" prefWidth="455.0" />
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="10.0" right="10.0" top="30.0" />
+                                       </VBox.margin>
+                                    </AnchorPane>
+                                    <AnchorPane layoutX="10.0" layoutY="265.0" prefHeight="59.0" prefWidth="806.0">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="14.0" text="Nova Lozinka:" underline="true">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="editNovaLozinka" layoutX="292.0" layoutY="17.0" prefHeight="26.0" prefWidth="455.0" />
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="10.0" right="10.0" top="30.0" />
+                                       </VBox.margin>
+                                    </AnchorPane>
+                                    <Pane prefHeight="10.0" prefWidth="806.0" style="-fx-background-color: #000;" />
+                                    <AnchorPane prefHeight="155.0" prefWidth="806.0" style="-fx-background-color: #0ed145;">
+                                       <children>
+                                          <Button fx:id="DokSave" layoutX="301.0" layoutY="53.0" mnemonicParsing="false" text="Spremi">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Button>
+                                          <Button fx:id="DokClear" layoutX="538.0" layoutY="53.0" mnemonicParsing="false" text="Očisti">
+                                             <font>
+                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
+                                             </font>
+                                          </Button>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                              </VBox>
                            </children>
                         </HBox>
                      </children>
                   </AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="Doktor Inbox">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             </content>
           </Tab>
             <Tab text="Doktor Pacijenti">
