--- a/MedicalSystem/src/Doktor/doktor.fxml
+++ b/MedicalSystem/src/Doktor/doktor.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -244,127 +246,88 @@
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab text="Doktor Pacijenti">
+            <Tab text="Pacijenti">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="690.0" prefWidth="1280.0" style="-fx-background-color: #83eeff;">
                      <children>
-                        <HBox prefHeight="692.0" prefWidth="1280.0">
+                        <HBox layoutY="146.0" prefHeight="548.0" prefWidth="1280.0">
                            <children>
-                              <VBox prefHeight="690.0" prefWidth="467.0" style="-fx-background-color: #fff;">
-                                 <children>
-                                    <AnchorPane prefHeight="191.0" prefWidth="467.0" style="-fx-background-color: #83eeff;">
-                                       <children>
-                                          <ImageView fitHeight="175.0" fitWidth="160.0" layoutX="14.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@Images/Doctor.png" />
-                                             </image>
-                                          </ImageView>
-                                          <Label layoutX="159.0" layoutY="26.0" text="Korisničko ime:" underline="true">
-                                             <font>
-                                                <Font name="Bookman Old Style Bold Italic" size="25.0" />
-                                             </font>
-                                          </Label>
-                                          <Text fx:id="DoktorName1" layoutX="263.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Doktor name" AnchorPane.leftAnchor="263.0">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="20.0" />
-                                             </font>
-                                          </Text>
-                                          <Pane layoutX="-2.0" layoutY="191.0" prefHeight="2.0" prefWidth="511.0" style="-fx-background-color: #000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                             <padding>
-                                                <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                                             </padding>
-                                          </Pane>
-                                          <Button fx:id="DokLogout1" layoutX="335.0" layoutY="128.0" mnemonicParsing="false" onMouseClicked="#Logout" text="Logout">
-                                             <font>
-                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
-                                             </font>
-                                          </Button>
-                                       </children>
-                                    </AnchorPane>
-                                    <AnchorPane prefHeight="489.0" prefWidth="467.0" style="-fx-background-color: #fff;">
-                                       <children>
-                                          <Label layoutX="34.0" layoutY="37.0" text="Ime Prezime:" underline="true" AnchorPane.bottomAnchor="428.6">
-                                             <font>
-                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text fx:id="ImePrezime1" layoutX="169.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="416.961328125" AnchorPane.leftAnchor="175.0">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="18.0" />
-                                             </font>
-                                          </Text>
-                                          <Label layoutX="34.0" layoutY="137.0" text="JMBG:" underline="true" AnchorPane.bottomAnchor="328.6">
-                                             <font>
-                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text fx:id="JMBG1" layoutX="107.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="316.961328125" AnchorPane.leftAnchor="107.0">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="18.0" />
-                                             </font>
-                                          </Text>
-                                          <Label layoutX="34.0" layoutY="237.0" text="Odjel:" underline="true" AnchorPane.bottomAnchor="228.60000000000002">
-                                             <font>
-                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text fx:id="Odjel1" layoutX="95.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="216.96132812500002" AnchorPane.leftAnchor="100.0">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="18.0" />
-                                             </font>
-                                          </Text>
-                                          <Label layoutX="34.0" layoutY="337.0" text="Opis:" underline="true" AnchorPane.bottomAnchor="128.60000000000002">
-                                             <font>
-                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text fx:id="Opis1" layoutX="87.0" layoutY="368.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.bottomAnchor="116.96132812500002" AnchorPane.leftAnchor="92.0">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="18.0" />
-                                             </font>
-                                          </Text>
-                                          <Pane layoutY="87.0" prefHeight="2.0" prefWidth="0.0" style="-fx-background-color: #000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                             <padding>
-                                                <Insets top="5.0" />
-                                             </padding>
-                                          </Pane>
-                                          <Pane layoutY="186.0" prefHeight="2.0" prefWidth="0.0" style="-fx-background-color: #000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                             <padding>
-                                                <Insets top="5.0" />
-                                             </padding>
-                                          </Pane>
-                                          <Pane layoutX="1.0" layoutY="287.0" prefHeight="2.0" prefWidth="0.0" style="-fx-background-color: #000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                             <padding>
-                                                <Insets top="5.0" />
-                                             </padding>
-                                          </Pane>
-                                          <Pane layoutX="-1.0" layoutY="386.0" prefHeight="2.0" prefWidth="0.0" style="-fx-background-color: #000;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                             <padding>
-                                                <Insets top="5.0" />
-                                             </padding>
-                                          </Pane>
-                                          <Label layoutX="33.0" layoutY="430.0" text="Lozinka:" underline="true">
-                                             <font>
-                                                <Font name="Bookman Old Style Bold Italic" size="20.0" />
-                                             </font>
-                                          </Label>
-                                          <Text fx:id="Lozinka1" layoutX="130.0" layoutY="461.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ime:" AnchorPane.leftAnchor="130.0">
-                                             <font>
-                                                <Font name="Bookman Old Style Italic" size="18.0" />
-                                             </font>
-                                          </Text>
-                                       </children>
-                                    </AnchorPane>
-                                 </children>
-                              </VBox>
-                              <Pane prefHeight="200.0" prefWidth="2.0" style="-fx-background-color: #000;">
-                                 <padding>
-                                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                                 </padding>
-                              </Pane>
+                              <TableView fx:id="PacijentTable" prefHeight="548.0" prefWidth="1299.0">
+                                 <columns>
+                                    <TableColumn fx:id="LijecnikIDP" prefWidth="75.0" text="Liječnik ID" />
+                                    <TableColumn fx:id="DatumP" prefWidth="123.19999694824219" text="Datum" />
+                                    <TableColumn fx:id="PregledP" prefWidth="287.20001220703125" text="Pregled" />
+                                    <TableColumn fx:id="PacijentP" prefWidth="198.4000244140625" text="Pacijent" />
+                                    <TableColumn fx:id="JMBGP" prefWidth="193.5999755859375" text="JMBG" />
+                                    <TableColumn fx:id="OsiguranjeP" minWidth="0.0" prefWidth="251.2000732421875" text="Zdrastveno osiguranje" />
+                                    <TableColumn fx:id="CovidP" minWidth="0.0" prefWidth="151.199951171875" text="Covid cjepivo" />
+                                 </columns>
+                              </TableView>
                            </children>
                         </HBox>
-                     </children></AnchorPane>
+                        <ImageView fitHeight="127.0" fitWidth="125.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@Images/Doctor.png" />
+                           </image>
+                        </ImageView>
+                        <Button fx:id="LogingOut" layoutX="131.0" layoutY="78.0" mnemonicParsing="false" onMouseClicked="#Logout" text="Logout">
+                           <font>
+                              <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                           </font>
+                        </Button>
+                        <ImageView fitHeight="72.0" fitWidth="84.0" layoutX="1168.0" layoutY="30.0" onMouseClicked="#OsvježiListu" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="40.0">
+                           <image>
+                              <Image url="@Images/Refresh.jpg" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="72.0" fitWidth="105.0" layoutX="1062.0" layoutY="30.0" onMouseClicked="#BrisanjePacijenata" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="128.0895538330078">
+                           <image>
+                              <Image url="@Images/Dell.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="72.0" fitWidth="84.0" layoutX="987.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="240.0">
+                           <image>
+                              <Image url="@Images/Edit.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="72.0" fitWidth="105.0" layoutX="870.0" layoutY="30.0" onMouseClicked="#addPacijenta" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="344.43404388427734">
+                           <image>
+                              <Image url="@Images/Adding.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="872.0" layoutY="104.0" text="Dodaj">
+                           <font>
+                              <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="975.0" layoutY="104.0" text="Uredi">
+                           <font>
+                              <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="1071.0" layoutY="104.0" text="Ukloni">
+                           <font>
+                              <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="1167.0" layoutY="104.0" text="Osvježi">
+                           <font>
+                              <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="468.0" layoutY="66.0" text="Pronađite Pacijenta:">
+                           <font>
+                              <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="468.0" layoutY="95.0" prefHeight="26.0" prefWidth="216.0" />
+                        <Text fx:id="DokName" layoutX="131.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Doktor Name:" underline="true">
+                           <font>
+                              <Font name="Bookman Old Style Bold Italic" size="20.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
                </content>
             </Tab>
         </tabs>
